# fyyur

./: .flaskenv  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  init.sql  pyproject.toml  requirements.txt  seed.py
fyyur/: __init__.py  models.py  search.py
fyyur/artist/: __init__.py  forms.py  routes.py
fyyur/errors/: __init__.py  handlers.py
fyyur/main/: __init__.py  forms.py  routes.py
fyyur/show/: __init__.py  forms.py  routes.py
fyyur/templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_show.html  new_venue.html  search.html
fyyur/templates/layouts/: main.html
fyyur/templates/pages/: artists.html  search_artists.html  search_venues.html  show_artist.html  show_venue.html  shows.html  venues.html
fyyur/venue/: __init__.py  forms.py  routes.py
migrations/versions/: 059918c19daf_shows.py  125eda3115fd_date_not_datetime.py  259e12606c79_.py  518f5329abe0_artist_availability.py  556c58c68f3b_.py  61600f360dc2_relationships.py  65bd36b54e90_.py  cc0ce4e84dc9_initial_migration.py  d0ea88b61985_relationships_and_new_artist_fields.py  de46350148c1_indexing.py
