[tool.poetry]
name = "fyyur"
version = "0.1.0"
description = ""
authors = ["Matt Gaskey <mattgaskey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-moment = "^1.0.6"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
postgres = "^4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
