[tool.poetry]
name = "fyyur"
version = "0.1.0"
description = ""
authors = ["Matt Gaskey <mattgaskey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-moment = "^1.0.6"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
postgres = "^4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"
gunicorn = "^22.0.0"
elasticsearch = "^8.14"


[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
